--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     href="https://fonts.googleapis.com/css2?family=Lobster&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
     rel="stylesheet">
 
-  <title>off my chest </title>
+  <title>off my chest.</title>
 </head>
 
 <body>
